@@ -59,7 +59,7 @@
 
 ;;; Version
 
-(defvar anything-c-version "<2007-08-20 Mon 08:23>"
+(defvar anything-c-version "<2007-08-23 Thu 20:46>"
   "The version of anything-config.el, or better the date of the
 last change.")
 
@@ -487,6 +487,80 @@ removed."
               (calc-eval anything-pattern)
             (error "error")))))
     (action ("Do Nothing" . ignore))))
+
+;;;; Google Suggestions
+
+(defvar anything-c-source-google-suggest
+  '((name . "Google Suggest")
+    (candidates
+     . (lambda ()
+         (let ((suggestions (anything-c-google-suggest-fetch anything-input)))
+           (if (some (lambda (suggestion)
+                       (equal (cdr suggestion) anything-input))
+                     suggestions)
+               suggestions
+             ;; if there is no suggestion exactly matching the input then
+             ;; prepend a Search on Google item to the list
+             (append (list (cons (concat "Search for "
+                                         "'" anything-input "'"
+                                         " on Google")
+                                 anything-input))
+                     suggestions)))))
+    (action . (("Google Search" .
+                (lambda (candidate)
+                  (browse-url (concat anything-c-google-suggest-search-url
+                                      (url-hexify-string candidate)))))))
+    (volatile)
+    (requires-pattern . 3)
+    (delayed)))
+
+(defvar anything-c-google-suggest-url
+  "http://www.google.com/complete/search?hl=en&js=true&qu="
+  "URL used for looking up suggestions.")
+
+(defvar anything-c-google-suggest-search-url
+  "http://www.google.com/search?ie=utf-8&oe=utf-8&q="
+  "URL used for searching.")
+
+(defun anything-c-google-suggest-fetch (input)
+  "Fetch suggestions for INPUT."
+  (let* ((result (with-current-buffer
+                     (url-retrieve-synchronously
+                      (concat anything-c-google-suggest-url
+                              (url-hexify-string input)))
+                   (buffer-substring (point-min) (point-max))))
+         (split (split-string result "new Array("))
+         (suggestions (anything-c-google-suggest-get-items (second split)))
+         (numbers (anything-c-google-suggest-get-items (third split)))
+         (longest (+ (apply 'max 0 (let (lengths)
+                                     (dotimes (i (length suggestions))
+                                       (push (+ (length (nth i suggestions))
+                                                (length (nth i numbers)))
+                                             lengths))
+                                     lengths))
+                     10))
+         items)
+    (dotimes (i (length suggestions))
+      (let ((suggestion (nth i suggestions))
+            (number (nth i numbers)))
+        (push (cons (concat suggestion
+                            (make-string (- longest
+                                            (length suggestion)
+                                            (length number))
+                                         32)
+                            number)
+                    suggestion)
+              items)))
+    items))
+
+(defun anything-c-google-suggest-get-items (str)
+  "Extract items from STR returned by Google Suggest."
+  (let ((start nil)
+        items)
+    (while (string-match "\"\\([^\"]+?\\)\"" str start)
+      (push (match-string 1 str) items)
+      (setq start (1+ (match-end 1))))
+    items))
 
 ;;; Type Action helpers
 
